kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pollz
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: m1thrandir/pollz-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
