kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pollz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: m1thrandir/pollz-frontend
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/status
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/status
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
