kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: pollz
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30001
  type: NodePort
