kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: pollz
spec:
  selector:
    app: db
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
